--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,24 @@
   font-family: 'Overcame Outline';
   src: url('./fonts/overcame-outline.woff');
 }
+h1{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+/*.inter-600 {*/
+/*          font-family: "Inter", sans-serif;*/
+/*          font-optical-sizing: auto;*/
+/*          font-weight: 600;*/
+/*          font-style: normal;*/
+/*        }*/
+/*.inter-700 {*/
+/*  font-family: "Inter", sans-serif;*/
+/*  font-optical-sizing: auto;*/
+/*  font-weight: 700;*/
+/*  font-style: normal;*/
+/*}*/
 
 * {
   margin: 0;
